[package]
name = "counter"
version = "0.1.0"
description = "A simple counter program built with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "counter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"

[dev-dependencies]
solana-program-test = "~1.17"
solana-sdk = "~3.0"
